Fix vertical alignment

--- a/jeockovanibezpecne/static/css/main.css
+++ b/jeockovanibezpecne/static/css/main.css
@@ -44,7 +44,7 @@ p.answer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
-  align-items: end;
+  align-items: start;
   max-width: 32rem;
   margin: 0 auto;
 }
